@@ -10,7 +10,6 @@ import consts.BossStatus;
 import models.boss.boss_list.SuperRank.Rival;
 import consts.ConstPlayer;
 import consts.ConstSuperRank;
-import lombok.Data;
 import models.map.Zone;
 import models.matches.pvp.DHVT;
 import models.player.Player;
@@ -21,7 +20,6 @@ import services.Service;
 import services.map.ChangeMapService;
 import utils.Util;
 
-@Data
 public final class SuperRank implements Runnable {
 
     private Zone zone;
@@ -36,6 +34,24 @@ public final class SuperRank implements Runnable {
     public int rankLose;
     public boolean win;
     public int error;
+
+    public Zone getZone() { return zone; }
+    public void setZone(Zone zone) { this.zone = zone; }
+
+    public boolean isCompeting() { return isCompeting; }
+    public void setCompeting(boolean isCompeting) { this.isCompeting = isCompeting; }
+
+    public long getPlayerId() { return playerId; }
+    public void setPlayerId(long playerId) { this.playerId = playerId; }
+
+    public long getRivalId() { return rivalId; }
+    public void setRivalId(long rivalId) { this.rivalId = rivalId; }
+
+    public Player getPlayer() { return player; }
+    public void setPlayer(Player player) { this.player = player; }
+
+    public Boss getRival() { return rival; }
+    public void setRival(Boss rival) { this.rival = rival; }
 
     public SuperRank(Player player, long rivalId, Zone zone) {
         try {
@@ -69,7 +85,7 @@ public final class SuperRank implements Runnable {
         if (player.zone.zoneId != zone.zoneId) {
             ChangeMapService.gI().changeZone(player, zone.zoneId);
         }
-        new Thread(this, "Super Rank").start();
+        Thread.ofVirtual().name("SuperRank-Worker").start(this);
     }
 
     @Override
@@ -134,37 +150,45 @@ public final class SuperRank implements Runnable {
         win = true;
         try {
             finish();
-            Player plWin = SuperRankService.gI().loadPlayer(playerId);
+            int currentRivalRank = SuperRankDAO.getRank((int) rivalId);
+            if (currentRivalRank > 0 && player != null && currentRivalRank < player.superRank.rank) {
+                rankWin = currentRivalRank;
+                rankLose = player.superRank.rank;
+            }
+
             Player plLose = SuperRankService.gI().loadPlayer(rivalId);
-            plWin.superRank.win++;
-            plLose.superRank.lose++;
-            if (plWin.superRank.ticket == 0 && plWin.inventory.getGem() > 0) {
-                plWin.inventory.subGem(2);
+            if (plLose != null) {
+                plLose.superRank.lose++;
+                plLose.superRank.rank = rankLose;
+                plLose.superRank.history("Thua " + (player != null ? player.name : "Đối thủ") + "[" + rankWin + "]", System.currentTimeMillis());
+                SuperRankDAO.updatePlayer(plLose);
             }
-            plWin.superRank.rank = rankWin;
-            plWin.superRank.history("Hạ " + plLose.name + "[" + rankLose + "]", System.currentTimeMillis());
-            SuperRankDAO.updatePlayer(plWin);
-            plLose.superRank.rank = rankLose;
-            plLose.superRank.history("Thua " + plWin.name + "[" + rankWin + "]", System.currentTimeMillis());
-            SuperRankDAO.updatePlayer(plLose);
-            if (rankWin <= 10) {
-                ServerNotify.gI().notify(ConstSuperRank.TEXT_TOP_10.replaceAll("%1", plWin.name).replaceAll("%2", rankWin + ""));
-            }
-            if (player != null && player.zone != null) {
+
+            if (player != null) {
                 player.superRank.win++;
-                if (player.superRank.ticket == 0 && player.inventory.getGem() > 0) {
+                if (player.superRank.ticket > 0) {
+                    player.superRank.ticket--;
+                } else if (player.inventory.getGem() >= 2) {
                     player.inventory.subGem(2);
                     Service.gI().sendMoney(player);
                 }
                 player.superRank.rank = rankWin;
-                player.superRank.history("Hạ " + plLose.name + "[" + rankLose + "]", System.currentTimeMillis());
-                Service.gI().chat(player, ConstSuperRank.TEXT_THANG.replaceAll("%1", rankWin + ""));
+                player.superRank.history("Hạ " + (plLose != null ? plLose.name : "Đối thủ") + "[" + rankLose + "]", System.currentTimeMillis());
+                SuperRankDAO.updatePlayer(player);
+                if (player.zone != null) {
+                    Service.gI().chat(player, ConstSuperRank.TEXT_THANG.replaceAll("%1", rankWin + ""));
+                }
             }
+
+            if (rankWin <= 10 && player != null) {
+                ServerNotify.gI().notify(ConstSuperRank.TEXT_TOP_10.replaceAll("%1", player.name).replaceAll("%2", rankWin + ""));
+            }
+
             Player rv = SuperRankService.gI().getPlayer(rivalId);
-            if (rv != null && rv.zone != null) {
-                rv.superRank.lose++;
+            if (rv != null && plLose != null) {
+                rv.superRank.lose = plLose.superRank.lose;
                 rv.superRank.rank = rankLose;
-                rv.superRank.history("Thua " + plWin.name + "[" + rankWin + "]", System.currentTimeMillis());
+                rv.superRank.history("Thua " + (player != null ? player.name : "Đối thủ") + "[" + rankWin + "]", System.currentTimeMillis());
             }
         } catch (Exception e) {
             e.printStackTrace();
@@ -176,38 +200,34 @@ public final class SuperRank implements Runnable {
         try {
             finish();
             Player plWin = SuperRankService.gI().loadPlayer(rivalId);
-            Player plLose = SuperRankService.gI().loadPlayer(playerId);
-            plWin.superRank.win++;
-            plLose.superRank.lose++;
-            if (plLose.superRank.ticket > 0) {
-                plLose.superRank.ticket--;
-            } else if (plLose.inventory.getGem() > 0) {
-                plLose.inventory.subGem(3);
-                Service.gI().sendMoney(plLose);
+            if (plWin != null) {
+                plWin.superRank.win++;
+                plWin.superRank.rank = rankWin;
+                plWin.superRank.history("Hạ " + (player != null ? player.name : "Đối thủ") + "[" + rankLose + "]", System.currentTimeMillis());
+                SuperRankDAO.updatePlayer(plWin);
             }
-            plWin.superRank.rank = rankWin;
-            plWin.superRank.history("Hạ " + plLose.name + "[" + rankLose + "]", System.currentTimeMillis());
-            SuperRankDAO.updatePlayer(plWin);
-            plLose.superRank.rank = rankLose;
-            plLose.superRank.history("Thua " + plWin.name + "[" + rankWin + "]", System.currentTimeMillis());
-            SuperRankDAO.updatePlayer(plLose);
-            if (player != null && player.zone != null) {
+
+            if (player != null) {
                 player.superRank.lose++;
                 if (player.superRank.ticket > 0) {
                     player.superRank.ticket--;
-                } else if (player.inventory.getGem() > 0) {
+                } else if (player.inventory.getGem() >= 3) {
                     player.inventory.subGem(3);
                     Service.gI().sendMoney(player);
                 }
                 player.superRank.rank = rankLose;
-                player.superRank.history("Thua " + plWin.name + "[" + rankWin + "]", System.currentTimeMillis());
-                Service.gI().chat(player, ConstSuperRank.TEXT_THUA);
+                player.superRank.history("Thua " + (plWin != null ? plWin.name : "Đối thủ") + "[" + rankWin + "]", System.currentTimeMillis());
+                SuperRankDAO.updatePlayer(player);
+                if (player.zone != null) {
+                    Service.gI().chat(player, ConstSuperRank.TEXT_THUA);
+                }
             }
+
             Player rv = SuperRankService.gI().getPlayer(rivalId);
-            if (rv != null && rv.zone != null) {
-                rv.superRank.win++;
+            if (rv != null && plWin != null) {
+                rv.superRank.win = plWin.superRank.win;
                 rv.superRank.rank = rankWin;
-                rv.superRank.history("Hạ " + plLose.name + "[" + rankLose + "]", System.currentTimeMillis());
+                rv.superRank.history("Hạ " + (player != null ? player.name : "Đối thủ") + "[" + rankLose + "]", System.currentTimeMillis());
             }
         } catch (Exception e) {
             e.printStackTrace();
